--- a/Chalkable.BackgroundTaskProducer/app.config
+++ b/Chalkable.BackgroundTaskProducer/app.config
@@ -2,6 +2,10 @@
 <configuration>
   <configSections>
     <section name="ChalkableConfiguration" type="Chalkable.Common.ApplicationConfiguration,Chalkable.Common" />
+    <section name="CreateDemoSchoolTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="DemoSchoolDeleteTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="EmptySchoolTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="ProcessReminderProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
   </configSections>
   <system.diagnostics>
     <trace>
@@ -32,4 +36,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <CreateDemoSchoolTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
+  <DemoSchoolDeleteTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
+  <EmptySchoolTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
+  <ProcessReminderProducer interval="1200" intervalStart="0" intervalEnd="86400"/>
 </configuration>
