--- a/Chalkable.BackgroundTaskProcessor/Chalkable.BackgroundTaskProcessor.csproj
+++ b/Chalkable.BackgroundTaskProcessor/Chalkable.BackgroundTaskProcessor.csproj
@@ -86,6 +86,7 @@
     <Compile Include="CreateEmptySchoolTaskHandler.cs" />
     <Compile Include="DatabaseUpdateTaskHandler.cs" />
     <Compile Include="ITaskHandler.cs" />
+    <Compile Include="ProcessRemindersTaskHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SisImportDataTaskHandler.cs" />
     <Compile Include="TaskProcessor.cs" />
