--- a/Chalkable.BackgroundTaskProducer/app.config
+++ b/Chalkable.BackgroundTaskProducer/app.config
@@ -6,6 +6,8 @@
     <section name="DemoSchoolDeleteTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="EmptySchoolTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="ProcessReminderProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="AttendanceNotificationProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    
   </configSections>
   <system.diagnostics>
     <trace>
@@ -40,4 +42,5 @@
   <DemoSchoolDeleteTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
   <EmptySchoolTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
   <ProcessReminderProducer interval="1200" intervalStart="0" intervalEnd="86400"/>
+  <AttendanceNotificationProducer interval="86400" intervalStart="79200" intervalEnd="86400"/>
 </configuration>
