--- a/Chalkable.BackgroundTaskProducer/Chalkable.BackgroundTaskProducer.csproj
+++ b/Chalkable.BackgroundTaskProducer/Chalkable.BackgroundTaskProducer.csproj
@@ -79,17 +79,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProducerConfigSection.cs" />
-    <Compile Include="Producers\AttendanceNotificationProducer.cs" />
+    <Compile Include="Producers\AllSchoolsProducer.cs" />
     <Compile Include="Producers\CreateDemoSchoolTaskProducer.cs" />
     <Compile Include="Producers\DemoSchoolDeleteTaskProducer.cs" />
     <Compile Include="Producers\EmptySchoolTaskProducer.cs" />
-    <Compile Include="Producers\ProcessReminderProducer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Producers\TaskProducer.cs" />
     <Compile Include="WorkerRole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="app.release.config" />
+    <None Include="app.staging.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
