--- a/Chalkable.BackgroundTaskProducer/app.staging.config
+++ b/Chalkable.BackgroundTaskProducer/app.staging.config
@@ -7,7 +7,7 @@
     <section name="EmptySchoolTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="ProcessReminderProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="AttendanceNotificationProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
-
+    <section name="TeacherAttendanceNotification" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
   </configSections>
   <system.diagnostics>
     <trace>
@@ -43,4 +43,5 @@
   <EmptySchoolTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
   <ProcessReminderProducer interval="1200" intervalStart="0" intervalEnd="86400"/>
   <AttendanceNotificationProducer interval="86400" intervalStart="79200" intervalEnd="86400"/>
+  <TeacherAttendanceNotification interval="1200" intervalStart="0" intervalEnd="86400"/>
 </configuration>
