--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -21,11 +21,11 @@
     <add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserName" value="ManagementClient" />
     <add key="WindowsAzure.OAuth.ServiceNamespaceManagementUserKey" value="JBWJoVgOgUP0pdPqxrdKO+OqRGyQ2gb2GdN8POvMgRA=" />
     
-    <add key="api.explorer.client-id" value="https://dev.chalkable.com" />
-    <add key="api.explorer.secret" value="Qwerty1@" />
-    <add key="api.explorer.redirecturi" value="https://dev.chalkable.com" />
-    <add key="api.explorer.client-name" value="api explorer" />
-    <add key="api.explorer.scope" value="https://dev.chalkable.com/" />
+    <add key="api.explorer.client-id" value="https://localhost/chalkable" />
+    <add key="api.explorer.secret" value="Qwerty1@Local" />
+    <add key="api.explorer.redirecturi" value="https://localhost/chalkable" />
+    <add key="api.explorer.client-name" value="local-api-explorer" />
+    <add key="api.explorer.scope" value="https://localhost/chalkable/" />
 
 
   </appSettings>
