--- a/Chalkable.BackgroundTaskProducer/app.release.config
+++ b/Chalkable.BackgroundTaskProducer/app.release.config
@@ -20,14 +20,14 @@
     </trace>
   </system.diagnostics>
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
+    <add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
   </connectionStrings>
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10"
                           DemoSchoolsReserved="4">
     <Servers>
-      <add key="DbServer1" value="wcc87p1bed.database.windows.net" />
+      <add key="DbServer1" value="me0buyg8np.database.windows.net" />
     </Servers>
   </ChalkableConfiguration>
   <runtime>
