--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -30,8 +30,8 @@
 
   </appSettings>
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}" />
   </connectionStrings>
   <system.web>
@@ -70,7 +70,7 @@
   </system.webServer>
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate" SchoolDbUser="chalkableadmin" SchoolDbPassword="Hellowebapps1!" EmptySchoolsReserved="10" DemoSchoolsReserved="20">
     <Servers>
-      <add key="DbServer1" value="wcc87p1bed.database.windows.net" />
+      <add key="DbServer1" value="me0buyg8np.database.windows.net" />
     </Servers>
   </ChalkableConfiguration>
   <runtime>
