--- a/Chalkable.BackgroundTaskProcessor/Chalkable.BackgroundTaskProcessor.csproj
+++ b/Chalkable.BackgroundTaskProcessor/Chalkable.BackgroundTaskProcessor.csproj
@@ -80,7 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttendanceNotificationTaskHandler.cs" />
-    <Compile Include="CreateDemoSchoolTaskHandler.cs" />
+    <Compile Include="CreateDemoDistrictTaskHandler.cs" />
     <Compile Include="DeleteSchoolTaskHandler.cs" />
     <Compile Include="Parallel\AllSchoolRunner.cs" />
     <Compile Include="BackupTaskHandler.cs" />
@@ -118,13 +118,9 @@
       <Project>{C9ACB7A6-1755-424A-B0BB-3B0C5B13EC15}</Project>
       <Name>Chalkable.Data.Master</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Chalkable.SisConnector\Chalkable.SisConnector.csproj">
-      <Project>{C6A26439-411D-4D8C-9BCE-1A34E7EE604F}</Project>
-      <Name>Chalkable.SisConnector</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Chalkable.SisImportFacade\Chalkable.SisImportFacade.csproj">
-      <Project>{BD404053-D827-4695-9F57-5003A337428C}</Project>
-      <Name>Chalkable.SisImportFacade</Name>
+    <ProjectReference Include="..\Chalkable.StiConnector\Chalkable.StiConnector.csproj">
+      <Project>{3D16203E-D19D-41E1-9918-2A9448427BFD}</Project>
+      <Name>Chalkable.StiConnector</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
