--- a/Chalkable.BackgroundTaskProducer/app.config
+++ b/Chalkable.BackgroundTaskProducer/app.config
@@ -2,12 +2,13 @@
 <configuration>
   <configSections>
     <section name="ChalkableConfiguration" type="Chalkable.Common.ApplicationConfiguration,Chalkable.Common" />
-    <section name="CreateDemoSchoolTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
-    <section name="DemoSchoolDeleteTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="CreateDemoDistrictTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="DemoDistrictDeleteTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="EmptySchoolTaskProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="ProcessReminderProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="AttendanceNotificationProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="TeacherAttendanceNotification" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="SisImportProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     
   </configSections>
   <system.diagnostics>
@@ -39,10 +40,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <CreateDemoSchoolTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
-  <DemoSchoolDeleteTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
+  <CreateDemoDistrictTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
+  <DemoDistrictDeleteTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
   <EmptySchoolTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
   <ProcessReminderProducer interval="1200" intervalStart="0" intervalEnd="86400"/>
   <AttendanceNotificationProducer interval="86400" intervalStart="79200" intervalEnd="86400"/>
   <TeacherAttendanceNotification interval="1200" intervalStart="0" intervalEnd="86400"/>
+  <SisImportProducer interval="1200" intervalStart="0" intervalEnd="86400"/>
 </configuration>
