--- a/Chalkable.BackgroundTaskProducer/app.staging.config
+++ b/Chalkable.BackgroundTaskProducer/app.staging.config
@@ -8,6 +8,7 @@
     <section name="ProcessReminderProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="AttendanceNotificationProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
     <section name="TeacherAttendanceNotification" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
+    <section name="SisImportProducer" type="Chalkable.BackgroundTaskProducer.ProducerConfigSection, Chalkable.BackgroundTaskProducer"/>
   </configSections>
   <system.diagnostics>
     <trace>
@@ -39,9 +40,10 @@
     </assemblyBinding>
   </runtime>
   <CreateDemoSchoolTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
-  <DemoSchoolDeleteTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
+  <DemoDistrictDeleteTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
   <EmptySchoolTaskProducer interval="20" intervalStart="0" intervalEnd="86400"/>
   <ProcessReminderProducer interval="1200" intervalStart="0" intervalEnd="86400"/>
   <AttendanceNotificationProducer interval="86400" intervalStart="79200" intervalEnd="86400"/>
   <TeacherAttendanceNotification interval="1200" intervalStart="0" intervalEnd="86400"/>
+  <SisImportProducer interval="1200" intervalStart="0" intervalEnd="86400"/>
 </configuration>
