--- a/Chalkable.StiConnector/Chalkable.StiConnector.csproj
+++ b/Chalkable.StiConnector/Chalkable.StiConnector.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Connectors\ConnectorBase.cs" />
     <Compile Include="Connectors\ConnectorLocator.cs" />
     <Compile Include="Connectors\Model\School.cs" />
+    <Compile Include="Connectors\Model\SectionAttendance.cs" />
     <Compile Include="Connectors\SchoolConnector.cs" />
     <Compile Include="Model\AbsenceLevelReason.cs">
       <DependentUpon>StiEntities.tt</DependentUpon>
