--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Chalkable.BackgroundTaskProcessor\packages.config" />
   <repository path="..\Chalkable.BackgroundTaskProducer\packages.config" />
+  <repository path="..\Chalkable.BusinessLogic\packages.config" />
   <repository path="..\Chalkable.Data.Common\packages.config" />
   <repository path="..\Chalkable.StiConnector\packages.config" />
   <repository path="..\Chalkable.Web\packages.config" />
