added fake data for grading summary

--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -426,6 +426,8 @@
     <Content Include="Views\Home\Student.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="fakeData\gradingClassSummary.json" />
+    <Content Include="fakeData\gradingSummary.json" />
     <None Include="Web.staging.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
