--- a/Chalkable.Web/Chalkable.Web.csproj
+++ b/Chalkable.Web/Chalkable.Web.csproj
@@ -441,6 +441,8 @@
     <Content Include="fakeData\disciplinesCalendar.json" />
     <Content Include="fakeData\studentDisciplines.json" />
     <Content Include="fakeData\studentDisciplinesSummary.json" />
+    <Content Include="fakeData\bannedAppData.json" />
+    <Content Include="fakeData\unbannedAppData.json" />
     <None Include="Web.staging.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
