added ChalkableHttpFileLoader refactored AnnouncementAttachmentController

--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Settings.cs" />
     <Compile Include="StringTools.cs" />
     <Compile Include="UrlTools.cs" />
+    <Compile Include="Web\ChalkableHttpFileLoader.cs" />
     <Compile Include="Web\ChalkableJsonResponce.cs" />
     <Compile Include="Web\EmailTools.cs" />
     <Compile Include="Web\JavaScriptString.cs" />
