Fixed template DB creation scripts. Added QA configuration.

--- a/Chalkable.Web/Web.qa.config
+++ b/Chalkable.Web/Web.qa.config
@@ -4,12 +4,13 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=me0buyg8np.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="ChalkableMaster" connectionString="Data Source=v8xjnk8au1.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=v8xjnk8au1.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID={2};Pwd={3}"  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
+
   <appSettings>
-		<add key="WindowsAzure.OAuth.SwtSigningKey" value="s6L1PpCuOrYHg93h+zszvnbFDSKPIFwwMmWGbfxLc0U=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <!--<add key="WindowsAzure.OAuth.SwtSigningKey" value="s6L1PpCuOrYHg93h+zszvnbFDSKPIFwwMmWGbfxLc0U=" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.RelyingPartyName" value="dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.RelyingPartyRealm" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="WindowsAzure.OAuth.ServiceNamespace" value="chalkable-dev-access-control" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
@@ -19,8 +20,8 @@
 		<add key="api.explorer.secret" value="Qwerty1@" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="api.explorer.redirecturi" value="https://dev.chalkable.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
 		<add key="api.explorer.client-name" value="api explorer" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-		<add key="api.explorer.scope" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
-	</appSettings>
+		<add key="api.explorer.scope" value="https://dev.chalkable.com/" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>-->
+  </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
