--- a/Chalkable.BackgroundTaskProcessor/Chalkable.BackgroundTaskProcessor.csproj
+++ b/Chalkable.BackgroundTaskProcessor/Chalkable.BackgroundTaskProcessor.csproj
@@ -105,6 +105,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="app.qa.config" />
     <None Include="app.release.config" />
     <None Include="app.staging.config" />
     <None Include="packages.config" />
