--- a/Chalkable.BackgroundTaskProducer/Chalkable.BackgroundTaskProducer.csproj
+++ b/Chalkable.BackgroundTaskProducer/Chalkable.BackgroundTaskProducer.csproj
@@ -97,6 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="app.qa.config" />
     <None Include="app.release.config">
       <SubType>Designer</SubType>
     </None>
