--- a/Chalkable.Data.School/Chalkable.Data.School.csproj
+++ b/Chalkable.Data.School/Chalkable.Data.School.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess\AlphaGradeDataAccess.cs" />
+    <Compile Include="DataAccess\AlternateScoreDataAccess.cs" />
     <Compile Include="DataAccess\BaseDataAccess.cs" />
     <Compile Include="DataAccess\AddressDataAccess.cs" />
     <Compile Include="DataAccess\AnnouncementApplicationDataAccess.cs" />
@@ -100,6 +102,8 @@
     <Compile Include="DataAccess\StudentSchoolYearDataAccess.cs" />
     <Compile Include="DataAccess\StudentParentDataAccess.cs" />
     <Compile Include="Model\Address.cs" />
+    <Compile Include="Model\AlphaGrade.cs" />
+    <Compile Include="Model\AlternateScore.cs" />
     <Compile Include="Model\Announcement.cs" />
     <Compile Include="Model\AnnouncementApplication.cs" />
     <Compile Include="Model\AnnouncementAttachment.cs" />
