added alphaGradeService, alternateScoreService

--- a/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
+++ b/Chalkable.BusinessLogic/Chalkable.BusinessLogic.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Services\Master\BackgroundTaskService.cs" />
     <Compile Include="Services\Master\UserService.cs" />
     <Compile Include="Services\School\AddressService.cs" />
+    <Compile Include="Services\School\AlphaGradeService.cs" />
     <Compile Include="Services\School\AnnouncementAttachmentService.cs" />
     <Compile Include="Services\School\AnnouncementQnAService.cs" />
     <Compile Include="Services\School\AnnouncementReminderService.cs" />
